--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 bootstrap4==0.1.0
 Django==4.0.5
 djangorestframework==3.13.1
+Pillow==9.1.1
 pytz==2022.1
 sqlparse==0.4.2
