--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,26 @@ beautifulsoup4==4.11.1
 bootstrap4==0.1.0
 boto3==1.24.2
 botocore==1.27.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+cloudinary==1.29.0
+config==0.5.1
+confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==4.0.5
 django-bootstrap4==22.1
+django-cloudinary-storage==0.3.0
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 django-location-field==2.1.0
 django-mapbox-location-field==2.0.0
 django-phonenumber-field==6.1.0
 django-phonenumbers==1.0.1
 django-storages==1.12.3
+django-tinymce==3.4.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
+idna==3.3
 jmespath==1.0.0
 phonenumbers==8.12.50
 Pillow==9.1.1
@@ -23,6 +32,7 @@ python-dateutil==2.8.2
 python-decouple==3.6
 python-dotenv==0.20.0
 pytz==2022.1
+requests==2.27.1
 s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
